       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.33 (v0_8_33) on Linux (lb32001) on 4/3/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.33 (v0_8_33) on Linux (lb0169) on 4/3/2007 ==

2007-04-03  Brian Kahne  <bkahne@freescale.com>

	* Make MakeTempName non-static so that a user of the library can
	override it to allow for alternate intermediate file names.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.32 (v0_8_32) on Linux (lb32001) on 3/23/2007 ==

2007-03-23  Brian Kahne  <bkahne@freescale.com>

	* I no longer build meas in the qt directory b/c for some reason,
	it  doesn't build on i686 platforms.  This is just a test program,
	so it's not required by anything else.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.31 (v0_8_31) on Linux (lb32001) on 3/23/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.31 (v0_8_31) on Linux (lb0169) on 3/23/2007 ==

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.31 (v0_8_31) on Linux (lb32001) on 3/23/2007 ==

2007-03-23  Brian Kahne  <bkahne@freescale.com>

	* Added support for nested template functions.  As with nested
	functions, this can be disabled by undefining NESTED_FUNCS_OKAY.
	Added parsing/in9.C to test this.

       == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.30 (v0_8_30) on Linux (lb32001) on 3/7/2007 ==

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.30 (v0_8_30) on SunOS (sb0183) on 1/22/2007 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.30 (v0_8_30) on Linux (lb32001) on 1/19/2007 

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.30 (v0_8_30) on Linux (lb32001) on 1/19/2007 

2007-01-19  Brian Kahne  <bkahne@freescale.com>

	* For Solaris, we'll compile, but we only test the parser.

         file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.29 (v0_8_29) on Linux (lb0169) on 12/8/2006 
