@@ -1,3 +1,10 @@
+2007-04-04  Brian Kahne  <bkahne@freescale.com>
+
+	* Fixed a bug in Program::LineNumber.  It was incorrectly looking
+	at string contents, so a string that contained something that
+	looked like a line number would be counted as a line number.
+	Added parsing/in10.C to test this.
+
        == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.33 (v0_8_33) on Linux (lb32001) on 4/3/2007 ==
 
        == file:///proj/.ppc_43/vc_noec/svn/plasma release 0.8.33 (v0_8_33) on Linux (lb0169) on 4/3/2007 ==
